--- a/app/pages/provinces/provinces.html
+++ b/app/pages/provinces/provinces.html
@@ -1,4 +1,7 @@
-<ActionBar title="Provinces"></ActionBar>
+
+<ios>
+<ActionBar title="Provinces" ></ActionBar>
+</ios>
 
 <GridLayout rows="auto, *">
 
