--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -5,4 +5,9 @@
 
     <Button [text]="isLoggingIn ? 'Sign in' : 'Sign up'" (tap)="submit()" class="submit-button"></Button>
     <Button [text]="isLoggingIn ? 'Sign up' : 'Back to log in'" (tap)="toggleDisplay()" ></Button>
+
+    <ActivityIndicator [busy]="isLoading" 
+        [visibility]="isAuthenticating ? 'visible' : 'collapse'" 
+        row="1" horizontalAlignment="center" verticalAlignment="center">
+    </ActivityIndicator>
 </StackLayout>
