--- a/app/pages/provinces/provinces.html
+++ b/app/pages/provinces/provinces.html
@@ -1,5 +1,7 @@
 <ActionBar title="Province" >
-    <NavigationButton (tap)="openDrawer()" text="Menu" android.systemIcon="ic_menu_moreoverflow"></NavigationButton>
+    <NavigationButton text="go back"></NavigationButton>
+    <ActionItem android.position="left" ios.position="left" (tap)="openDrawer()" text="Menu" 
+    android.systemIcon="ic_menu_moreoverflow"></ActionItem>
 </ActionBar>
 
 <RadSideDrawer tkExampleTitle tkToggleNavButton>
