--- a/app/pages/provinces/provinces.html
+++ b/app/pages/provinces/provinces.html
@@ -12,6 +12,7 @@
         </StackLayout>
         <StackLayout class="sideStackLayout">
             <Label text="Profile" (tap)="toProfile()" class="sideLabel sideLightGrayLabel"></Label>
+            <Label text="Log Out" (tap)="logout()" class="sideLabel sideLightGrayLabel"></Label>
         </StackLayout>
     </StackLayout>
     <StackLayout tkMainContent>
